# fwht

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  tests.yml
src/: core.rs  functions.rs  lib.rs  traits.rs
src/impls/: array.rs  mod.rs  ndarray.rs  vec.rs
